# VINREPO

./: .env.example  .gitignore  LOGBOOK.md  Makefile  README.md  SSHFILE  SSHFILE.pub  debug_labels.py  pyproject.toml  requirements.txt  run.py  run_vin_deepseek.py  run_vin_liquidai.py  run_vin_ocr.py  run_vin_paddleocr.py  zenml_deploy.yaml
.serena/: project.yml
dev-docs/: stratification-plan.md
docs/: HARDWARE_REQUIREMENTS.md
model/: __init__.py  cnn.py
pipelines/: __init__.py  training_pipeline.py  vin_deepseek_pipeline.py  vin_liquidai_pipeline.py  vin_ocr_pipeline.py  vin_paddleocr_pipeline.py
steps/: __init__.py  data_loader.py  evaluate.py  training.py  vin_fetch_dagshub.py  vin_prepare_dataset.py  vin_train_deepseek.py  vin_train_liquidai.py  vin_train_paddleocr.py
stubs/flash_attn_stub/: README.md  pyproject.toml
stubs/flash_attn_stub/src/flash_attn/: __init__.py  flash_attn_interface.py
tracking/: __init__.py  git.py  logbook.py  pytorch.py  reproduce_run.py  run.py
vin_ocr/: README.md  __init__.py  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
vin_ocr/configs/: deepseek_finetune.yaml  liquidai_finetune.yaml  paddleocr_finetune.yaml  rec_icdar15_train.yml
vin_ocr/configs/models/: deepseek.yaml  liquidai.yaml  trocr.yaml
vin_ocr/tools/: __init__.py  dagshub_fetch.py
vin_ocr/training/: __init__.py  baseline_trainer.py  finetune_deepseek.py  finetune_liquidai.py  finetune_paddleocr.py  hf_finetune.py  placeholder.py  runner.py
vin_ocr/utils/: __init__.py  cli.py  metrics.py  vin_labels.py  zenml.py
